--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -1,39 +1,58 @@
+
 .App {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: 2rem;
+  background-color: #242A35;
+  margin: none;
   height: 100vh;
 }
 
-.App > div + div {
-  margin-top: 2rem;
+
+
+.connect-wallet {
+  display: flex;
+  flex-direction: row;
+  justify-content: right;
+  margin-right: 70px;
+  background-color: #242A35;
+  border-bottom: 1px solid #cccccc;
+  width: 100%;
+  padding: 1em;
+  height: 40px;
+
 }
 
-.connect-wallet,
+
 .wallet-info {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  background-color: #242A35;
+  color: #cccccc;
   width: 100%;
-  padding: 1rem;
+  margin-top: 20px;
   border-radius: 0.25rem;
-  box-shadow: 0px 0px 10px 1px rgba(0, 0, 0, 0.1);
 }
 
 .wallet-info > div > p:first-of-type {
   overflow-x: auto;
+  font-weight: normal;
+  text-align: right;
+  margin-right: 20px;
+  margin-top: 0px;
+  font-size: 15px;
 }
 
-button {
-  padding: 1rem;
-  border-radius: 12px;
-  outline: none;
+.button {
+  
+  
   background-color: #f1f3f5;
-  border-radius: 0.25rem;
-  border: 0;
+  border-radius: 50%;
   cursor: pointer;
   transition: opacity 0.3s ease;
+  padding: 100px;
+
 }
 
 .button-disconnect {
@@ -54,4 +73,13 @@ button + button {
 
 .text-error {
   color: #ff6b6b;
+}
+
+p:first-of-type{
+
+  font-weight: bold;
+  margin-left: 20px;
+  font-size: 30px;
+  margin-bottom: 0px;
+  
 }
