--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -26,21 +26,22 @@
 
 .wallet-info {
   display: flex;
-  flex-direction: column;
-  justify-content: center;
+  flex-direction: row;
+  justify-content: left;
   background-color: #242A35;
   color: #cccccc;
   width: 100%;
   margin-top: 20px;
   border-radius: 0.25rem;
+  
 }
 
 .wallet-info > div > p:first-of-type {
   overflow-x: auto;
   font-weight: normal;
-  text-align: right;
+  margin-left: 800px;
   margin-right: 20px;
-  margin-top: 0px;
+  margin-top: 70px;
   font-size: 15px;
 }
 
@@ -51,7 +52,8 @@
   border-radius: 50%;
   cursor: pointer;
   transition: opacity 0.3s ease;
-  padding: 100px;
+  
+
 
 }
 
@@ -83,3 +85,9 @@ p:first-of-type{
   margin-bottom: 0px;
   
 }
+
+.logo {
+
+  margin-top: 10px;
+}
+
