--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -2,10 +2,10 @@
 .App {
   display: flex;
   flex-direction: column;
-  align-items: center;
   background-color: #242A35;
   margin: none;
   height: 100vh;
+  width: 100vw;
 }
 
 
@@ -14,10 +14,10 @@
   display: flex;
   flex-direction: row;
   justify-content: right;
-  margin-right: 70px;
+  margin-right: 100px;
   background-color: #242A35;
   border-bottom: 1px solid #cccccc;
-  width: 100%;
+  width: 95%;
   padding: 1em;
   height: 40px;
 
@@ -47,13 +47,12 @@
 
 .button {
   
-  
+  display:block;
   background-color: #f1f3f5;
   border-radius: 50%;
   cursor: pointer;
   transition: opacity 0.3s ease;
   
-
 
 }
 
@@ -91,3 +90,51 @@ p:first-of-type{
   margin-top: 10px;
 }
 
+.Sidebar {
+  height: 100%;
+  width: 150px;
+  background-color: #1f242e;
+  align-items: left;
+}
+
+.SidebarList {
+  height: auto;
+  width: 100%;
+  padding: 0;
+  margin-top: 80px;
+}
+
+.SidebarList .row{
+width: 100%;
+height: 70px;
+list-style-type: none;
+display: flex;
+flex-direction: row;
+color:#cccccc;
+margin: 0%;
+justify-content: center;
+align-items: center;
+}
+
+.SidebarList .row:hover {
+  cursor: pointer;
+  background-color: #1a1e27;
+  width: 100%;
+}
+
+.SidebarList #active {
+  background-color: #1a1e27;
+}
+
+.row #icon {
+  flex: 30%;
+  display: grid;
+  place-items: center;
+
+
+}
+
+.row #title {
+  flex: 70%; 
+  
+}
